# rsls

./: .dir-locals.el  Cargo.toml  flake.nix  setup.el  test.sql
src/: keywords.rs  main.rs
