[package]
name = "rsls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.5.2"
lsp-types = "0.92.0"
ropey = "1.3.2"
rusqlite = "0.26.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sqlformat = "0.1.8"
